--- a/package.json
+++ b/package.json
@@ -20,28 +20,30 @@
     "@angular/flex-layout": "^2.0.0-beta.8",
     "@angular/forms": "^4.1.3",
     "@angular/http": "^4.1.3",
+    "@angular/material": "2.0.0-beta.6",
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
     "@ngx-translate/core": "^7.0.0",
     "@ngx-translate/http-loader": "^0.1.0",
-    "@angular/material": "2.0.0-beta.6",
+    "angular2-fontawesome": "^0.9.0",
     "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
     "d3": "^3.5.17",
     "firebase": "^4.1.2",
+    "hammerjs": "2.0.8",
     "jquery": "^3.2.1",
-    "ngx-quill": "^1.2.0",
+    "moment": "^2.15.0",
+    "ng2-img-cropper": "^0.8.8",
     "ng2-translate": "^5.0.0",
+    "ngx-quill": "^1.2.0",
     "nvd3": "^1.8.5",
     "perfect-scrollbar": "^0.7.1",
     "rxjs": "^5.0.1",
     "screenfull": "^3.0.2",
     "ts-helpers": "^1.1.1",
     "typescript": "^2.2.1",
-    "hammerjs": "2.0.8",
-    "moment": "^2.15.0",
     "zone.js": "0.8.5"
   },
   "devDependencies": {
