--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "@ngx-translate/core": "^7.0.0",
     "@ngx-translate/http-loader": "^0.1.0",
+    "angular-calendar": "^0.17.3",
     "angular2-fontawesome": "^0.9.0",
     "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
@@ -37,6 +39,7 @@
     "moment": "^2.15.0",
     "ng2-img-cropper": "^0.8.8",
     "ng2-translate": "^5.0.0",
+    "ngx-perfect-scrollbar": "^4.4.0",
     "ngx-quill": "^1.2.0",
     "nvd3": "^1.8.5",
     "perfect-scrollbar": "^0.7.1",
