--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "^2.4.1",
     "d3": "^3.5.17",
     "firebase": "^4.1.2",
+    "font-awesome": "^4.7.0",
     "hammerjs": "2.0.8",
     "jquery": "^3.2.1",
     "moment": "^2.15.0",
