--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "@ngx-translate/core": "^7.0.0",
     "@ngx-translate/http-loader": "^0.1.0",
+    "@swimlane/ngx-datatable": "^9.3.0",
     "angular-calendar": "^0.17.3",
+    "angular-sortablejs": "^2.0.6",
     "angular2-fontawesome": "^0.9.0",
     "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
@@ -37,7 +39,9 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "2.0.8",
     "jquery": "^3.2.1",
+    "md-autocomplete": "0.0.1-alpha.1",
     "moment": "^2.15.0",
+    "ng2-file-upload": "^1.2.1",
     "ng2-img-cropper": "^0.8.8",
     "ng2-translate": "^5.0.0",
     "ngx-perfect-scrollbar": "^4.4.0",
@@ -46,6 +50,7 @@
     "perfect-scrollbar": "^0.7.1",
     "rxjs": "^5.0.1",
     "screenfull": "^3.0.2",
+    "sortablejs": "^1.6.0",
     "ts-helpers": "^1.1.1",
     "typescript": "^2.2.1",
     "zone.js": "0.8.5"
