--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@ngx-translate/core": "^7.0.0",
     "@ngx-translate/http-loader": "^0.1.0",
     "@swimlane/ngx-datatable": "^9.3.0",
-    "angular-calendar": "^0.17.3",
+    "@types/lodash": "^4.14.67",
+    "angular-calendar": "^0.18.3",
     "angular-sortablejs": "^2.0.6",
+    "angular-tree-component": "^3.7.3",
     "angular2-fontawesome": "^0.9.0",
+    "angular2-material-datepicker": "^0.5.0",
     "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
     "d3": "^3.5.17",
