--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "ng serve",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "sw": "sw-precache --root=dist --config=sw-precache-config.js",
+    "static-serve": "cd dist && live-server --port=4200 --host=localhost --entry-file=/index.html"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.1.3",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.3",
     "@angular/compiler-cli": "^4.1.3",
@@ -20,7 +23,7 @@
     "@angular/flex-layout": "^2.0.0-beta.8",
     "@angular/forms": "^4.1.3",
     "@angular/http": "^4.1.3",
-    "@angular/material": "2.0.0-beta.6",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/platform-server": "^4.1.3",
@@ -42,7 +45,6 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "2.0.8",
     "jquery": "^3.2.1",
-    "md-autocomplete": "0.0.1-alpha.1",
     "moment": "^2.15.0",
     "ng2-file-upload": "^1.2.1",
     "ng2-img-cropper": "^0.8.8",
@@ -61,11 +63,11 @@
   "devDependencies": {
     "@angular/cli": "^1.1.1",
     "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
     "@types/d3": "^3.5.17",
-    "@types/nvd3": "^1.8.33",
+    "@types/jasmine": "2.5.38",
     "@types/jquery": "2.0.40",
+    "@types/node": "^6.0.42",
+    "@types/nvd3": "^1.8.33",
     "codelyzer": "~2.0.0-beta.1",
     "css-loader": "^0.28.4",
     "jasmine-core": "2.5.2",
@@ -80,6 +82,7 @@
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
+    "sw-precache": "^5.2.0",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.3",
