--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.1.3",
+    "@angular/app-shell": "^0.1.0",
     "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.3",
@@ -28,6 +29,7 @@
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/platform-server": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "@angular/service-worker": "^1.0.0-beta.16",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "@ngx-translate/core": "^7.0.0",
     "@ngx-translate/http-loader": "^0.1.0",
